--- a/package.json
+++ b/package.json
@@ -6,18 +6,21 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all && nodemon index.js",
+    "drop": "npx sequelize db:drop",
     "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json ."
   },
   "keywords": [],
   "author": "Lorena Góes",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "nodemon": "^2.0.12",
     "mysql2": "^2.2.5",
+    "nodemon": "^2.0.12",
     "sequelize": "6.3.4",
-    "shelljs": "0.8.4",
-    "sequelize-cli": "6.2.0"
+    "sequelize-cli": "6.2.0",
+    "shelljs": "0.8.4"
   },
   "devDependencies": {
     "eslint": "6.8.0",
