--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,37 @@
 version: '3'
 
 services:
-  db:
-    image: mysql:5.7.31
-    command: --default-authentication-plugin=mysql_native_password --sql_mode=NO_ENGINE_SUBSTITUTION,NO_AUTO_CREATE_USER --explicit_defaults_for_timestamp
-    restart: always
-    ports:
-      - '3306:3306'
-    environment:
-      - MYSQL_ROOT_PASSWORD=root
-      - TZ=America/Sao_Paulo
-    networks:
-      - backend
-
   app:
-    build: .
+    build:
+      context: .
+    env_file: ./.env
     command: npm start
+    restart: always
+    volumes: 
+      - .:/app/
+      - /app/node_modules
     ports:
-        - '3000:3000'
-    volumes:
-        - .:/usr/app
-    links:
-      - db
+      - $NODE_LOCAL_PORT:$NODE_DOCKER_PORT
     depends_on:
       - db
-    environment:
-      - MYSQL_USER=root
-      - MYSQL_PASSWORD=root
-      - MYSQL_HOST=db
-      - MYSQL_DATABASE=users_api
-      - NODE_ENV=development
-      - PORT=3000
-    networks:
-      - backend
+    environment: 
+      MYSQL_HOST: db
 
-networks:
-  backend:
-    driver: 'bridge'
+  db:
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
+    env_file: ./.env
+    environment:
+      MYSQL_ROOT_PASSWORD: $MYSQL_ROOT_PASSWORD
+      MYSQL_DATABASE: $MYSQL_DATABASE
+    ports:
+      - $MYSQL_LOCAL_PORT:$MYSQL_DOCKER_PORT
+    volumes:
+      - mysql:/var/lib/mysql
+      - mysql_config:/etc/mysql
+
+volumes:
+  mysql:
+  mysql_config:
       
