update docker variables

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
-MYSQL_HOST=insira_seu_dominio
-MYSQL_USER=insira_seu_usuario
-MYSQL_ROOT_PASSWORD=insira_sua_senha
+MYSQL_HOST=localhost
+MYSQL_ROOT_USER=root 
+MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=users_api
 MYSQL_LOCAL_PORT=3306
 MYSQL_DOCKER_PORT=3306
